

======================================================================
Changes since version 3.5.0
======================================================================


General Changes
===============

- Added support for SOCKSv4 proxies to the Ice core in C++, C# and
  Java. This allows outgoing TCP & SSL connections using IPv4 to be
  mediated by a network proxy service.


C++ Changes
===========

- Fixed file descriptor leak that would occur if an object adapter
  listened on a UDP endpoint (one descriptor leaked per UDP endpoint).

- Fixed a bug that could cause an unexpected exception to be thrown on
  plugin loading and if a plugin property specified both a path and
  version.

- Fixed a bug in slice2cpp that generated invalid C++ code for C++11
  asynchronous invocations.


C# Changes
==========

- Fixed a bug in slice2cs that caused incorrect code to be generated
  for a Slice structure that declares default values for its members.


======================================================================
Changes since version 3.5b
======================================================================


General Changes
===============

- Fixed a bug where the CtrlCHandler destruction would cause a
  segfault on some recent Linux distributions with GCC 4.7.

- IPv6 is now enabled by default. A server listening on an endpoint
  with the wildcard address will therefore now accept connections from
  both IPv4 and IPv6 clients. It will also publish endpoints with IPv6
  addresses if some network interfaces are configured with IPv6
  addresses.

  Ice will still prefer IPv4 addresses when resolving hostnames from
  endpoints and the result includes both types of addresses. This
  behavior can be changed by setting Ice.PreferIPv6Address to 1. In
  this case, Ice prefers the IPv6 address over the IPv4 address if the
  hostname resolves to both IPv4 and IPv6 addresses.

  IPv6 can be disabled by setting Ice.IPv6 to 0.
