@@ -2455,10 +2455,14 @@ Ice::ConnectionI::sendNextMessage(vector<SentCallback>& callbacks)
 
             //
             // If we are in the closed state, don't continue sending.
+            //
+            // The connection can be in the closed state if parseMessage
+            // (called before sendNextMessage by message()) closes the
+            // connection.
             // 
             if(_state >= StateClosed)
             {
-                break;
+                return;
             }
 
             //
