@@ -2312,10 +2312,14 @@ namespace Ice
 
                     //
                     // If we are in the closed state, don't continue sending.
+                    //
+                    // The connection can be in the closed state if parseMessage
+                    // (called before sendNextMessage by message()) closes the
+                    // connection.
                     // 
                     if(_state >= StateClosed)
                     {
-                        break;
+                        return callbacks;
                     }
                 
                     //
